{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 21,
  "lineage": "a63c696e-ce3d-e946-04b4-86e71c143d3d",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/21"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/Cyber-Range-Admin/providers/Microsoft.Network/virtualNetworks/Cyber-Range-VNet/subnets/Cyber-Range-Subnet",
            "name": "Cyber-Range-Subnet",
            "network_security_group_id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/Cyber-Range-Admin-SOC/providers/Microsoft.Network/networkSecurityGroups/nsg-cyber-range",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Cyber-Range-Admin",
            "virtual_network_name": "Cyber-Range-VNet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "c95a327f-fbda-4c16-a495-e895eac07d53",
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/Cyber-Range-Admin/providers/Microsoft.Network/virtualNetworks/Cyber-Range-VNet",
            "location": "eastus2",
            "name": "Cyber-Range-VNet",
            "resource_group_name": "Cyber-Range-Admin",
            "subnets": [
              "AzureBastionSubnet",
              "Cyber-Range-Subnet"
            ],
            "vnet_peerings": {
              "cyber-range-1-to-cyber-range-2": "/subscriptions/cd015a7d-a927-49c6-896a-67d4a4886ef4/resourceGroups/Cyber-Range-2-Admin/providers/Microsoft.Network/virtualNetworks/Cyber-Range-2-VNet",
              "cyber-range-1-to-cyber-range-3": "/subscriptions/4380de62-42aa-453c-be4c-aa56fcd8c057/resourceGroups/Cyber-Range-3-Admin/providers/Microsoft.Network/virtualNetworks/Cyber-Range-3-VNet",
              "cyber-range-1-to-cyber-range-4": "/subscriptions/e4e00840-a756-4d63-b468-7f43d2ed2673/resourceGroups/Cyber-Range-4-Admin/providers/Microsoft.Network/virtualNetworks/Cyber-Range-4-VNet"
            },
            "vnet_peerings_addresses": [
              "10.1.0.0/16",
              "10.2.0.0/16",
              "10.3.0.0/16"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkInterfaces/RiseUp-Migration-Lab-nic",
            "internal_domain_name_suffix": "p2zfvso05mlezjev3ck4vqd3kd.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.100",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/publicIPAddresses/RiseUp-Migration-Lab-ip",
                "subnet_id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/Cyber-Range-Admin/providers/Microsoft.Network/virtualNetworks/Cyber-Range-VNet/subnets/Cyber-Range-Subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "00-22-48-4F-FF-A3",
            "name": "RiseUp-Migration-Lab-nic",
            "private_ip_address": "10.0.0.100",
            "private_ip_addresses": [
              "10.0.0.100"
            ],
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "virtual_machine_id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Compute/virtualMachines/RiseUp-Migration-Lab"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "RiseUp-Migration-Lab-nic",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "subscription_id": "3c95e63a-895a-4386-991e-edbbf57de5c8"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.subnet",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkInterfaces/RiseUp-Migration-Lab-nic|/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkSecurityGroups/RiseUp-Migration-Lab-nsg",
            "network_interface_id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkInterfaces/RiseUp-Migration-Lab-nic",
            "network_security_group_id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkSecurityGroups/RiseUp-Migration-Lab-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.subnet",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkSecurityGroups/RiseUp-Migration-Lab-nsg",
            "location": "eastus2",
            "name": "RiseUp-Migration-Lab-nsg",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 320,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Splunk-Web",
                "priority": 190,
                "protocol": "Tcp",
                "source_address_prefix": "97.105.176.135/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "RiseUp-Migration-Lab-nsg",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "subscription_id": "3c95e63a-895a-4386-991e-edbbf57de5c8"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http_any",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkSecurityGroups/RiseUp-Migration-Lab-nsg/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "RiseUp-Migration-Lab-nsg",
            "priority": 320,
            "protocol": "Tcp",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "HTTP",
            "network_security_group_name": "RiseUp-Migration-Lab-nsg",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "subscription_id": "3c95e63a-895a-4386-991e-edbbf57de5c8"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_splunk_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8000",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkSecurityGroups/RiseUp-Migration-Lab-nsg/securityRules/Allow-Splunk-Web",
            "name": "Allow-Splunk-Web",
            "network_security_group_name": "RiseUp-Migration-Lab-nsg",
            "priority": 190,
            "protocol": "Tcp",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "source_address_prefix": "97.105.176.135/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-Splunk-Web",
            "network_security_group_name": "RiseUp-Migration-Lab-nsg",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "subscription_id": "3c95e63a-895a-4386-991e-edbbf57de5c8"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh_any",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkSecurityGroups/RiseUp-Migration-Lab-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "RiseUp-Migration-Lab-nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "SSH",
            "network_security_group_name": "RiseUp-Migration-Lab-nsg",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "subscription_id": "3c95e63a-895a-4386-991e-edbbf57de5c8"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/networkSecurityGroups/RiseUp-Migration-Lab-nsg/securityRules/Access-My-VM",
            "name": "Access-My-VM",
            "network_security_group_name": "RiseUp-Migration-Lab-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "source_address_prefix": "97.105.176.135/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Access-My-VM",
            "network_security_group_name": "RiseUp-Migration-Lab-nsg",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "subscription_id": "3c95e63a-895a-4386-991e-edbbf57de5c8"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3c95e63a-895a-4386-991e-edbbf57de5c8/resourceGroups/student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64/providers/Microsoft.Network/publicIPAddresses/RiseUp-Migration-Lab-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.57.126.227",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "RiseUp-Migration-Lab-ip",
            "resource_group_name": "student-rg-5a1a409ddae648ace835da2376f9b16ffc87e31769233f69fcf269fadcad2f64",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}